--- a/src/app/plantas/planta-list/planta-list.component.html
+++ b/src/app/plantas/planta-list/planta-list.component.html
@@ -24,3 +24,5 @@
         </tbody>
     </table>
 </div>
+<p>Total plantas interior: {{interiorPlants}}</p>
+<p>Total plantas exterior: {{exteriorPlants}}</p>
